[gd_scene load_steps=3 format=3 uid="uid://dv3h7ynp82buq"]

[ext_resource type="Texture2D" uid="uid://5p210n6amveu" path="res://Textures/UI/Placeholder Upgrade Screen.jpg" id="1_akvwh"]
[ext_resource type="Script" path="res://UI/UpgradeUI/upgrade_ui.gd" id="1_fvcha"]

[node name="UIUpgrade" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fvcha")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_akvwh")
expand_mode = 2

[node name="Upgrade1" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.286
anchor_top = 0.182
anchor_right = 0.376
anchor_bottom = 0.352
offset_left = -6.47202
offset_top = -4.936
offset_right = 0.847992
offset_bottom = 1.90398

[node name="Upgrade2" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.61
anchor_top = 0.162
anchor_right = 0.702
anchor_bottom = 0.352
offset_left = 0.279968
offset_top = 0.0240021
offset_right = 0.295959
offset_bottom = -8.09602

[node name="Upgrade3" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.244
anchor_top = 0.579
anchor_right = 0.332
anchor_bottom = 0.744
offset_left = -0.0880127
offset_top = -0.192047
offset_right = 0.53598
offset_bottom = -0.112

[node name="Upgrade4" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.676
anchor_top = 0.585
anchor_right = 0.76
anchor_bottom = 0.75
offset_left = 0.247925
offset_top = -0.0800171
offset_right = 0.479919
offset_bottom = -3.05176e-05
